Testing: keeping JS disabled; adding images back

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
               </div>
             </div>
           </nav>
+          <article>
+            <div class="code-container"><img src="./img/dev/html5-original.png" class="code-lang">
+              <pre><code class="html">
+                  <div class="code-content"></div></code></pre>
+              <pre><code class="js">
+                  <div class="code-content"></div></code></pre>
+              <pre><code class="scss">
+                  <div class="code-content"></div></code></pre>
+              <div id="progress">
+                <div id="bar"></div>
+              </div>
+            </div>
+          </article>
           <div class="push"></div>
         </header>
         <footer>
@@ -62,7 +75,16 @@
           <h1>Website Designs</h1>
           <h2>Amish Furniture of Rockwall</h2>
           <p>Freelance project for local company</p>
-
+          <div class="columns-1"><img src="./img/websites/amish-furniture.png" class="hideme"></div>
+          <h2>Clocks-N-Things</h2>
+          <p>Freelance project for another local company</p>
+          <div class="columns-1"><img src="./img/websites/clocks-n-things.png" class="hideme"></div>
+          <h2>Rockwall FCM</h2>
+          <p>Project for school club</p>
+          <div class="columns-1"><img src="./img/websites/rockwall-fcm.png" class="hideme"></div>
+          <h2>Forbidden Truth</h2>
+          <p>Game project website</p>
+          <div class="columns-1"><img src="./img/websites/forbidden-truth.png" class="hideme"></div>
         </article>
       </div>
       <div class="push"></div>
