Testing: Running page without JavaScript for speed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Sample Website</title>
     <link type="text/css" rel="stylesheet" href="css/index.min.css">
     <link type="text/css" rel="stylesheet" href="css/index.css">
-    <!-- highlight.js-->
     <link type="text/css" rel="stylesheet" href="css/highlight/styles/androidstudio.css">
   </head>
   <body>
@@ -74,31 +73,23 @@
           <header>Check out some of my latest projects...</header>
           <h1>Website Designs</h1>
           <h2>Amish Furniture of Rockwall</h2>
-          <p>Freelance project for local company</p>
-          <div class="columns-1"><img src="./img/websites/amish-furniture.png" class="hideme"></div>
+          <p>Freelance project for local company</p><img src="./img/websites/amish-furniture.png" class="hideme">
           <h2>Clocks-N-Things</h2>
-          <p>Freelance project for another local company</p>
-          <div class="columns-1"><img src="./img/websites/clocks-n-things.png" class="hideme"></div>
+          <p>Freelance project for another local company</p><img src="./img/websites/clocks-n-things.png" class="hideme">
           <h2>Rockwall FCM</h2>
-          <p>Project for school club</p>
-          <div class="columns-1"><img src="./img/websites/rockwall-fcm.png" class="hideme"></div>
+          <p>Project for school club</p><img src="./img/websites/rockwall-fcm.png" class="hideme">
           <h2>Forbidden Truth</h2>
-          <p>Game project website</p>
-          <div class="columns-1"><img src="./img/websites/forbidden-truth.png" class="hideme"></div>
+          <p>Game project website</p><img src="./img/websites/forbidden-truth.png" class="hideme">
         </article>
       </div>
       <div class="push"></div>
       <footer id="footer"></footer>
     </div>
     <!--highlight.js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <!--font awesome icon set-->
     <script src="https://use.fontawesome.com/02b2bc5fda.js"></script>
     <!--jQuery plugins-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <!--unused jQuery plugins    -->
     <!--main scripts-->
-    <script src="js/source.js"></script>
   </body>
 </html>
