--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     <!--font awesome icon set-->
     <script src="https://use.fontawesome.com/02b2bc5fda.js"></script>
     <!--jQuery plugins-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!--unused jQuery plugins    -->
     <!--main scripts-->
+    <script src="js/source.js"></script>
   </body>
 </html>
