--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <footer id="footer"></footer>
     </div>
     <!--highlight.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <!--font awesome icon set-->
     <script src="https://use.fontawesome.com/02b2bc5fda.js"></script>
     <!--jQuery plugins-->
