--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/highlight/styles/ir-black.css">
   </head>
   <body>
-    <div class="bg-1"></div>
-    <div class="bg-2"></div>
-    <div class="bg-3"></div>
+    <div class="bg"></div>
     <div id="homepage">
       <header>
         <nav id="top"><img src="./img/sketchy_name.png">
@@ -25,23 +23,40 @@
           </div>
         </nav>
       </header>
-      <footer>
-        <h1>Prof & Personal Websites</h1><span class="left"><</span><span class="right">></span>
-        <figure class="rockwallfcm"><i class="fa fa-search fa-3"></i><img src="./img/websites/rockwall-fcm.png">
-          <figcaption>Rockwall <b>FCM</b></figcaption>
-        </figure>
-        <figure class="amishfurniture"><i class="fa fa-search fa-3"></i><img src="./img/websites/amish-furniture.png">
-          <figcaption>Amish <b>Furniture</b></figcaption>
-        </figure>
-        <figure class="forbiddentruth"><i class="fa fa-search fa-3"></i><img src="./img/websites/forbidden-truth.png">
-          <figcaption>Forbidden <b>Truth</b></figcaption>
-        </figure>
-        <figure class="clocksnthings"><i class="fa fa-search fa-3"></i><img src="./img/websites/clocks-n-things.png">
-          <figcaption>Clocks-<b>N</b>-Things</figcaption>
-        </figure>
-      </footer>
+      <article>
+        <h1>Prof & Personal Websites</h1>
+        <aside>
+          <h2>About Me</h2>
+          <div>
+            <h2 class="lorem-ipsum">Lorem ipsum dolor sit amet</h2>
+            <p class="lorem-ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla, purus in porttitor pellentesque, erat arcu tincidunt diam, dapibus faucibus leo mauris at sapien. In porttitor vehicula sodales. Vivamus massa neque, facilisis eu felis ut, aliquet convallis nisi. Nam elementum tellus vitae gravida fermentum. Nullam et imperdiet leo. Integer ut euismod lorem, in placerat lacus. Curabitur bibendum arcu ut feugiat commodo. Suspendisse ut mi vel orci ullamcorper tincidunt. Nam vitae fringilla nibh. Nullam hendrerit blandit velit eu hendrerit.</p>
+            <p class="lorem-ipsum">Praesent eu enim non massa pellentesque lobortis. In in sagittis dolor. Aliquam non massa erat. Ut aliquet gravida tellus, sed volutpat nibh condimentum et. Nunc quam purus, vehicula quis venenatis et, porttitor vel dolor. Cras facilisis dui id elit bibendum, in ullamcorper leo ultricies. Praesent rutrum lacus sit amet sem convallis, ut interdum dolor vestibulum.</p>
+          </div>
+        </aside>
+        <aside class="right">
+          <h2>About Me</h2>
+          <div>
+            <h2 class="lorem-ipsum">Lorem ipsum dolor sit amet</h2>
+            <p class="lorem-ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla, purus in porttitor pellentesque, erat arcu tincidunt diam, dapibus faucibus leo mauris at sapien. In porttitor vehicula sodales. Vivamus massa neque, facilisis eu felis ut, aliquet convallis nisi. Nam elementum tellus vitae gravida fermentum. Nullam et imperdiet leo. Integer ut euismod lorem, in placerat lacus. Curabitur bibendum arcu ut feugiat commodo. Suspendisse ut mi vel orci ullamcorper tincidunt. Nam vitae fringilla nibh. Nullam hendrerit blandit velit eu hendrerit.</p>
+            <p class="lorem-ipsum">Praesent eu enim non massa pellentesque lobortis. In in sagittis dolor. Aliquam non massa erat. Ut aliquet gravida tellus, sed volutpat nibh condimentum et. Nunc quam purus, vehicula quis venenatis et, porttitor vel dolor. Cras facilisis dui id elit bibendum, in ullamcorper leo ultricies. Praesent rutrum lacus sit amet sem convallis, ut interdum dolor vestibulum.</p>
+          </div>
+        </aside>
+        <article><span class="left"><</span><span class="right">></span>
+          <figure class="rockwallfcm"><i class="fa fa-search fa-3"></i><img src="./img/websites/rockwall-fcm.png">
+            <figcaption>Rockwall <b>FCM</b></figcaption>
+          </figure>
+          <figure class="amishfurniture"><i class="fa fa-search fa-3"></i><img src="./img/websites/amish-furniture.png">
+            <figcaption>Amish <b>Furniture</b></figcaption>
+          </figure>
+          <figure class="forbiddentruth"><i class="fa fa-search fa-3"></i><img src="./img/websites/forbidden-truth.png">
+            <figcaption>Forbidden <b>Truth</b></figcaption>
+          </figure>
+          <figure class="clocksnthings"><i class="fa fa-search fa-3"></i><img src="./img/websites/clocks-n-things.png">
+            <figcaption>Clocks-<b>N</b>-Things</figcaption>
+          </figure>
+        </article>
+      </article>
     </div>
-    <div class="push"></div>
     <!--highlight.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <!--font awesome icon set-->
