Minor modifications to main side-panel.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         <aside class="right">
           <div>
             <h1 class="project_name">sitesbyjustin.com</h1>
-            <p class="technologies"><span class="devicons devicons-git"></span><span class="devicons devicons-html5"></span><span class="devicons devicons-css3"></span><span class="devicons devicons-javascript"></span><span class="devicons devicons-jquery"></span><span class="devicons devicons-sass"></span></p>
+            <p class="technologies"><span class="devicons devicons-git"></span><span class="devicons devicons-html5"></span><span class="devicons devicons-css3"></span><span class="devicons devicons-javascript"></span><span class="devicons devicons-jquery"></span><span class="devicons devicons-sass"></span><span class="devicons devicons-atom"></span></p>
             <p class="project_desc">
               This website underwent 5 different design phases.
-              The site was created using Sass and Jade for pre-compiled languages,
-              HTML5 and CSS3 for other parts, jQuery for DOM manipulation, 
-              and it is hosted via Git Pages.
+              The site was created using <span style="color: #CF649A">Sass</span> and 
+              <span style="color: #C1272D"> Jade </span> as pre-compiled languages,
+              <span style="color: #E44D26"> HTML5 </span> and 
+              <span style="color: #007DC6"> CSS3 </span> after compilation, 
+              <span style="color: #116AAE"> jQuery </span> for DOM manipulation, 
+              and is hosted via 
+              <span style="color: #800080"> Git Pages</span>.
             </p><a href="https://github.com/jgreenlee24" class="button github">view on github<span><i class="fa fa-github fa-3"></i></span></a>
           </div>
         </aside>
