Added pichu's cloud website image.

--- a/index.html
+++ b/index.html
@@ -19,37 +19,15 @@
       <article>
         <aside class="right">
           <div>
-            <h1 class="project_name">sitesbyjustin.com</h1>
-            <p class="technologies"><span class="devicons devicons-git"></span><span class="devicons devicons-html5"></span><span class="devicons devicons-css3"></span><span class="devicons devicons-javascript"></span><span class="devicons devicons-jquery"></span><span class="devicons devicons-sass"></span><span class="devicons devicons-atom"></span></p>
-            <p class="project_desc">
-              This website underwent 5 different design phases.
-              The site was created using <span style="color: #CF649A">Sass</span> and 
-              <span style="color: #C1272D"> Jade </span> as pre-compiled languages,
-              <span style="color: #E44D26"> HTML5 </span> and 
-              <span style="color: #007DC6"> CSS3 </span> after compilation, 
-              <span style="color: #116AAE"> jQuery </span> for DOM manipulation, 
-              and is hosted via 
-              <span style="color: #800080"> Git Pages</span>.
-            </p><a href="https://github.com/jgreenlee24" class="button github">view on github<span><i class="fa fa-github fa-3"></i></span></a>
+            <h1 class="project_name"></h1>
+            <p class="technologies"></p>
+            <p class="project_desc"></p><a href="https://github.com/jgreenlee24" class="button github">view on github<span><i class="fa fa-github fa-3"></i></span></a>
           </div>
         </aside>
         <section>
-          <figure class="rockwallfcm"><i class="fa fa-search fa-3"></i><img src="./img/websites/rockwall-fcm.png">
-            <figcaption>Rockwall <b>FCM</b></figcaption>
+          <figure class="project_pic"><img>
+            <figcaption></figcaption>
           </figure>
-          <figure class="sitesbyjustin"><i class="fa fa-search fa-3"></i><img src="./img/websites/sites-by-justin.png">
-            <figcaption>Sites By <b>Justin</b></figcaption>
-          </figure>
-          <figure class="amishfurniture"><i class="fa fa-search fa-3"></i><img src="./img/websites/amish-furniture.png">
-            <figcaption>Amish <b>Furniture</b></figcaption>
-          </figure>
-          <figure class="forbiddentruth"><i class="fa fa-search fa-3"></i><img src="./img/websites/forbidden-truth.png">
-            <figcaption>Forbidden <b>Truth</b></figcaption>
-          </figure>
-          <figure class="clocksnthings"><i class="fa fa-search fa-3"></i><img src="./img/websites/clocks-n-things.png">
-            <figcaption>Clocks-<b>N</b>-Things</figcaption>
-          </figure>
-          
         </section>
       </article>
     </div>
